--- a/draft/ref/battery.bib
+++ b/draft/ref/battery.bib
@@ -5,39 +5,69 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 
 @article{Portals2014,
 author = {Portals, Grid and Architectures, Service-oriented},
-file = {::},
+file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(98).pdf:pdf},
 issn = {21535868},
 title = {{Enhancing and Supporting Integrated Computational Material Science En- gineering Education Enhancing and Supporting Integrated Computational Material Science Engineering Education}},
 year = {2014}
 }
-@article{Cui2012,
-abstract = {A second nearest-neighbor modified embedded atom method (2NN MEAM) interatomic potential for lithium-silicon (Li-Si) alloys is developed by using the particle swarm optimization (PSO) method in conjunction with ab initio calculations. It is shown that the new interatomic potential is capable of simulating the transition from disordered to ordered states of Li-Si crystalline structures, an indication of the stability and robustness of the interatomic potential at finite temperature. Examples are given to demonstrate that the new interatomic potential is also capable of predicting the material properties of both crystalline and amorphous Li-Si alloys, including the elastic modulus, compositional expansion, diffusivity of Li in Li-Si alloys, plastic yield strength, etc. {\textcopyright} 2012 Elsevier B.V. All rights reserved.},
-author = {Cui, Zhiwei and Gao, Feng and Cui, Zhihua and Qu, Jianmin},
-doi = {10.1016/j.jpowsour.2012.01.145},
-file = {::},
-isbn = {0378-7753},
-issn = {03787753},
-journal = {Journal of Power Sources},
-keywords = {Disordered-ordered transition,Li-Si alloy,Li-ion battery,Modified embedded atom method,Particle swarm optimization},
-pages = {150--159},
-publisher = {Elsevier B.V.},
-title = {{A second nearest-neighbor embedded atom method interatomic potential for Li-Si alloys}},
-url = {http://dx.doi.org/10.1016/j.jpowsour.2012.01.145},
-volume = {207},
+@article{Li2017a,
+abstract = {The formation of metallic lithium microstructures in the form of dendrites or mosses at the surface of anode electrodes (e.g., lithium metal, graphite, and silicon) leads to rapid capacity fade and poses grave safety risks in rechargeable lithium batteries. We present here a direct, relative quantitative analysis of lithium deposition on graphite anodes in pouch cells under normal operating conditions, paired with a model cathode material, the layered nickel-rich oxide LiNi 0.61 Co 0.12 Mn 0.27 O 2 , over the course of 3000 charge−discharge cycles. Secondary-ion mass spectrometry chemically dissects the solid−electrolyte interphase (SEI) on extensively cycled graphite with virtually atomic depth resolution and reveals substantial growth of Li-metal deposits. With the absence of apparent kinetic (e.g., fast charging) or stoichiometric restraints (e.g., overcharge) during cycling, we show lithium deposition on graphite is triggered by certain transition-metal ions (manganese in particular) dissolved from the cathode in a disrupted SEI. This insidious effect is found to initiate at a very early stage of cell operation ({\textless}200 cycles) and can be effectively inhibited by substituting a small amount of aluminum (∼1 mol {\%}) in the cathode, resulting in much reduced transition-metal dissolution and drastically improved cyclability. Our results may also be applicable to studying the unstable electrodeposition of lithium on other substrates, including Li metal. KEYWORDS: lithium-ion batteries, nickel-rich layered oxides, carbon anodes, lithium deposition, transition-metal dissolution, secondary-ion mass spectrometry R echargeable lithium-based batteries are highly sought after energy storage devices for electric vehicle (EV) and smart grid storage applications. 1 Currently, layered transition-metal oxide cathodes paired with silicon−carbon composite anodes are considered likely to satisfy the near-term demand of EVs with 300-plus autonomy mile ranges. 2,3 Apart from ever-increasing demands for energy and power densities, battery safety has also been brought to the forefront in the community. One of the major concerns, the formation of dendritic or mossy metallic lithium microstructures on anodes due to nonuniform lithium deposition (plating), accelerates capacity fade by consuming active Li ions during battery operation and may induce internal short circuits and fire hazards associated with flammable nonaqueous electrolytes.},
+author = {Li, Wangda and Kim, Un Hyuck and Dolocan, Andrei and Sun, Yang Kook and Manthiram, Arumugam},
+doi = {10.1021/acsnano.7b01494},
+file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(80).pdf:pdf},
+isbn = {1936-0851},
+issn = {1936086X},
+journal = {ACS Nano},
+keywords = {carbon anodes,lithium deposition,lithium-ion batteries,nickel-rich layered oxides,secondary-ion mass spectrometry,transition-metal dissolution},
+number = {6},
+pages = {5853--5863},
+title = {{Formation and Inhibition of Metallic Lithium Microstructures in Lithium Batteries Driven by Chemical Crossover}},
+volume = {11},
+year = {2017}
+}
+@article{Goes1998,
+abstract = {Thirty-six noncarious human molars were extracted and stored in saline. The buccal surfaces were ground wet on 400-grit silicon carbide paper to create a flat surface. The enamel and dentin surfaces were treated with 35{\%} phosphoric acid gel, 10{\%} phosphoric acid gel and 10{\%} maleic acid gel for 15 and 60 seconds. Scanning electron microscope analysis showed that all the acid etchants modified the micromorphological appearance of enamel and dentin surfaces independent of the type of acid, the etching time and the concentration. On the enamel surface, the 35{\%} and 10{\%} phosphoric acid gels and the 10{\%} maleic acid gel applied for 15 or 60 seconds preferentially removed the prism core material. In the specimens treated for 15 seconds with 10{\%} maleic acid the prism core material was partially removed. On the dentin surface, the phosphoric acid gels (35{\%} and 10{\%}) and the 10{\%} maleic acid gel applied for 15 and 60 seconds removed the smear layer and opened the dentinal tubule orifices; however, the dentinal surface etched for 15 or 60 seconds with 10{\%} maleic acid gel showed residues of the smear layer.},
+author = {Goes, M. F. and Sinhoreti, M. A. and Consani, S. and Silva, M. A.},
+doi = {10.1088/1742-6596/755/1/011001},
+file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(85).pdf:pdf},
+isbn = {0103-6440 (Print)$\backslash$r0103-6440 (Linking)},
+issn = {01036440},
+journal = {Brazilian dental journal},
+number = {1},
+pages = {3--10},
+pmid = {9835798},
+title = {{Morphological effect of the type, concentration and etching time of acid solutions on enamel and dentin surfaces.}},
+volume = {9},
+year = {1998}
+}
+@article{Pal2012,
+author = {Pal, S. and Damle, S. and Patel, S. and Dutta, M. K. and Kumta, P. N. and Maiti, S.},
+file = {:home/alex/Documents/Mendeley Desktop/2012/2012{\_}Micromechanisms of Capacity Fade in Silicon Anode for Lithium-Ion Batteries S. Pal.pdf:pdf},
+journal = {Transactions, E C S Society, The Electrochemical},
+number = {11},
+pages = {87--99},
+title = {{Micromechanisms of Capacity Fade in Silicon Anode for Lithium-Ion Batteries S. Pal}},
+volume = {41},
 year = {2012}
 }
-@article{Api2013,
-author = {Api, K I M and Ellio, Ryan S and Tadmor, Ellad B},
-file = {::},
-pages = {1--44},
-title = {{Knowledgebase of Interatomic Models Application Programming Interface}},
+@article{Wang2013,
+abstract = {Using molecular dynamics method, we investigate the diffusion property of lithium in different silicon structures and silicon structure{\&}apos;s disorder extent during lithium{\&}apos;s diffusion process. We find that the pathway and the incident angle between the direction of barrier and diffusion of lithium are also the essential factors to the lithium{\&}apos;s diffusion property in silicon anode besides the barrier. Smaller incident angle could decrease the scattering of lithium in silicon structure effectively. Moreover, lithium diffuses easier in the Li-Si alloy structure of higher lithium concentration with deeper injection depth. The silicon{\&}apos;s structure will be damaged gradually during the charge and discharge process. However, it will also recover to initial state to a great extent after relaxation. Therefore, the damage of lithium diffusion to silicon anode in the structure of low lithium concentration is reversible to a great degree. In addition, the silicon structure of {\textless}110{\textgreater} crystal orientation perform better properties in both lithium{\&}apos;s diffusivity and structural stability.},
+author = {Wang, Huanyu and Ji, Xiao and Chen, Chi and Xu, Kui and Miao, Ling},
+doi = {10.1063/1.4829440},
+file = {:home/alex/Documents/Mendeley Desktop/2013/2013{\_}Lithium diffusion in silicon and induced structure disorder A molecular dynamics study.pdf:pdf},
+isbn = {2158-3226},
+issn = {21583226},
+journal = {AIP Advances},
+number = {11},
+title = {{Lithium diffusion in silicon and induced structure disorder: A molecular dynamics study}},
+volume = {3},
 year = {2013}
 }
 @article{Bhargava2007,
 abstract = {A model to perform coarse grained molecular dynamics simulations of room temperature ionic liquids of the family 1-n-alkyl-3-methylimidazolium hexafluorophosphate has been developed. Large scale simulations of ionic liquids with butyl, heptyl, and decyl side chains have been carried out. Calculated structure factors demonstrate intermediate range ordering in these liquids. The spatial correlations between anions are shown to dominate the neutron or X-ray scattering at low wave vectors. Ionic liquids with long side chains exhibit a bicontinuous morphology, one region consisting of polar moieties and the other of non-polar, alkyl tails.},
 author = {Bhargava, B. Lokegowda and Devane, Russell and Klein, Michael L. and Balasubramanian, Sundaram},
 doi = {10.1039/b710801j},
-file = {::},
+file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(90).pdf:pdf},
 isbn = {1744-683X},
 issn = {1744683X},
 journal = {Soft Matter},
@@ -52,7 +82,7 @@ year = {2007}
 abstract = {Cracking of electrodes caused by large volume change and the associated lithium diffusion-induced stress during electrochemical cycling is one of the main reasons for the short cycle life of lithium-ion batteries using high capacity anode materials, such as Si and Sn. In this work, we study the fracture behavior and cracking patterns in amorphous Si thin film electrodes as a result of electrochemical cycling. A modified spring-block model is shown to capture the essential features of cracking patterns of electrode materials, including self-similarity. It is shown that cracks are straight in thick films, but show more wiggles in thin films. As the thickness of film decreases, the average size of islands separated by cracks decreases. A critical thickness bellow which material would not crack is found for amorphous Si films. The experimental and simulation results of this work provide guidelines for designing crack free thin-film lithium ion battery electrodes during cycling by patterning the electrode and reducing the film thickness.},
 author = {Li, Juchuan and Dozier, Alan K. and Li, Yunchao and Yang, Fuqian and Cheng, Yang-Tse},
 doi = {10.1149/1.3574027},
-file = {::},
+file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(71).pdf:pdf},
 isbn = {0013-4651},
 issn = {00134651},
 journal = {Journal of The Electrochemical Society},
@@ -63,56 +93,26 @@ url = {http://jes.ecsdl.org/cgi/doi/10.1149/1.3574027},
 volume = {158},
 year = {2011}
 }
-@article{Li2017a,
-abstract = {The formation of metallic lithium microstructures in the form of dendrites or mosses at the surface of anode electrodes (e.g., lithium metal, graphite, and silicon) leads to rapid capacity fade and poses grave safety risks in rechargeable lithium batteries. We present here a direct, relative quantitative analysis of lithium deposition on graphite anodes in pouch cells under normal operating conditions, paired with a model cathode material, the layered nickel-rich oxide LiNi 0.61 Co 0.12 Mn 0.27 O 2 , over the course of 3000 charge−discharge cycles. Secondary-ion mass spectrometry chemically dissects the solid−electrolyte interphase (SEI) on extensively cycled graphite with virtually atomic depth resolution and reveals substantial growth of Li-metal deposits. With the absence of apparent kinetic (e.g., fast charging) or stoichiometric restraints (e.g., overcharge) during cycling, we show lithium deposition on graphite is triggered by certain transition-metal ions (manganese in particular) dissolved from the cathode in a disrupted SEI. This insidious effect is found to initiate at a very early stage of cell operation ({\textless}200 cycles) and can be effectively inhibited by substituting a small amount of aluminum (∼1 mol {\%}) in the cathode, resulting in much reduced transition-metal dissolution and drastically improved cyclability. Our results may also be applicable to studying the unstable electrodeposition of lithium on other substrates, including Li metal. KEYWORDS: lithium-ion batteries, nickel-rich layered oxides, carbon anodes, lithium deposition, transition-metal dissolution, secondary-ion mass spectrometry R echargeable lithium-based batteries are highly sought after energy storage devices for electric vehicle (EV) and smart grid storage applications. 1 Currently, layered transition-metal oxide cathodes paired with silicon−carbon composite anodes are considered likely to satisfy the near-term demand of EVs with 300-plus autonomy mile ranges. 2,3 Apart from ever-increasing demands for energy and power densities, battery safety has also been brought to the forefront in the community. One of the major concerns, the formation of dendritic or mossy metallic lithium microstructures on anodes due to nonuniform lithium deposition (plating), accelerates capacity fade by consuming active Li ions during battery operation and may induce internal short circuits and fire hazards associated with flammable nonaqueous electrolytes.},
-author = {Li, Wangda and Kim, Un Hyuck and Dolocan, Andrei and Sun, Yang Kook and Manthiram, Arumugam},
-doi = {10.1021/acsnano.7b01494},
-file = {::},
-isbn = {1936-0851},
-issn = {1936086X},
-journal = {ACS Nano},
-keywords = {carbon anodes,lithium deposition,lithium-ion batteries,nickel-rich layered oxides,secondary-ion mass spectrometry,transition-metal dissolution},
-number = {6},
-pages = {5853--5863},
-title = {{Formation and Inhibition of Metallic Lithium Microstructures in Lithium Batteries Driven by Chemical Crossover}},
-volume = {11},
-year = {2017}
-}
-@article{Wang2013,
-abstract = {Using molecular dynamics method, we investigate the diffusion property of lithium in different silicon structures and silicon structure{\&}apos;s disorder extent during lithium{\&}apos;s diffusion process. We find that the pathway and the incident angle between the direction of barrier and diffusion of lithium are also the essential factors to the lithium{\&}apos;s diffusion property in silicon anode besides the barrier. Smaller incident angle could decrease the scattering of lithium in silicon structure effectively. Moreover, lithium diffuses easier in the Li-Si alloy structure of higher lithium concentration with deeper injection depth. The silicon{\&}apos;s structure will be damaged gradually during the charge and discharge process. However, it will also recover to initial state to a great extent after relaxation. Therefore, the damage of lithium diffusion to silicon anode in the structure of low lithium concentration is reversible to a great degree. In addition, the silicon structure of {\textless}110{\textgreater} crystal orientation perform better properties in both lithium{\&}apos;s diffusivity and structural stability.},
-author = {Wang, Huanyu and Ji, Xiao and Chen, Chi and Xu, Kui and Miao, Ling},
-doi = {10.1063/1.4829440},
-file = {::},
-isbn = {2158-3226},
-issn = {21583226},
-journal = {AIP Advances},
-number = {11},
-title = {{Lithium diffusion in silicon and induced structure disorder: A molecular dynamics study}},
-volume = {3},
-year = {2013}
-}
-@article{Goes1998,
-abstract = {Thirty-six noncarious human molars were extracted and stored in saline. The buccal surfaces were ground wet on 400-grit silicon carbide paper to create a flat surface. The enamel and dentin surfaces were treated with 35{\%} phosphoric acid gel, 10{\%} phosphoric acid gel and 10{\%} maleic acid gel for 15 and 60 seconds. Scanning electron microscope analysis showed that all the acid etchants modified the micromorphological appearance of enamel and dentin surfaces independent of the type of acid, the etching time and the concentration. On the enamel surface, the 35{\%} and 10{\%} phosphoric acid gels and the 10{\%} maleic acid gel applied for 15 or 60 seconds preferentially removed the prism core material. In the specimens treated for 15 seconds with 10{\%} maleic acid the prism core material was partially removed. On the dentin surface, the phosphoric acid gels (35{\%} and 10{\%}) and the 10{\%} maleic acid gel applied for 15 and 60 seconds removed the smear layer and opened the dentinal tubule orifices; however, the dentinal surface etched for 15 or 60 seconds with 10{\%} maleic acid gel showed residues of the smear layer.},
-author = {Goes, M. F. and Sinhoreti, M. A. and Consani, S. and Silva, M. A.},
-doi = {10.1088/1742-6596/755/1/011001},
-file = {::},
-isbn = {0103-6440 (Print)$\backslash$r0103-6440 (Linking)},
-issn = {01036440},
-journal = {Brazilian dental journal},
-number = {1},
-pages = {3--10},
-pmid = {9835798},
-title = {{Morphological effect of the type, concentration and etching time of acid solutions on enamel and dentin surfaces.}},
-volume = {9},
-year = {1998}
-}
-@article{Pal2012,
-author = {Pal, S. and Damle, S. and Patel, S. and Dutta, M. K. and Kumta, P. N. and Maiti, S.},
-file = {::},
-journal = {Transactions, E C S Society, The Electrochemical},
-number = {11},
-pages = {87--99},
-title = {{Micromechanisms of Capacity Fade in Silicon Anode for Lithium-Ion Batteries S. Pal}},
-volume = {41},
+@article{Cui2012,
+abstract = {A second nearest-neighbor modified embedded atom method (2NN MEAM) interatomic potential for lithium-silicon (Li-Si) alloys is developed by using the particle swarm optimization (PSO) method in conjunction with ab initio calculations. It is shown that the new interatomic potential is capable of simulating the transition from disordered to ordered states of Li-Si crystalline structures, an indication of the stability and robustness of the interatomic potential at finite temperature. Examples are given to demonstrate that the new interatomic potential is also capable of predicting the material properties of both crystalline and amorphous Li-Si alloys, including the elastic modulus, compositional expansion, diffusivity of Li in Li-Si alloys, plastic yield strength, etc. {\textcopyright} 2012 Elsevier B.V. All rights reserved.},
+author = {Cui, Zhiwei and Gao, Feng and Cui, Zhihua and Qu, Jianmin},
+doi = {10.1016/j.jpowsour.2012.01.145},
+file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(86).pdf:pdf},
+isbn = {0378-7753},
+issn = {03787753},
+journal = {Journal of Power Sources},
+keywords = {Disordered-ordered transition,Li-Si alloy,Li-ion battery,Modified embedded atom method,Particle swarm optimization},
+pages = {150--159},
+publisher = {Elsevier B.V.},
+title = {{A second nearest-neighbor embedded atom method interatomic potential for Li-Si alloys}},
+url = {http://dx.doi.org/10.1016/j.jpowsour.2012.01.145},
+volume = {207},
 year = {2012}
+}
+@article{Api2013,
+author = {Api, K I M and Ellio, Ryan S and Tadmor, Ellad B},
+file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(95).pdf:pdf},
+pages = {1--44},
+title = {{Knowledgebase of Interatomic Models Application Programming Interface}},
+year = {2013}
 }
